Fixed animation bug, and too many waves on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -31,10 +31,10 @@
 
 @-webkit-keyframes animate-link{
 	from{
-		width: 0%;
+		height: 0%;
 	}
 	to{
-		width: 100%;
+		height: 100%;
 
 	}
 }
@@ -48,3 +48,4 @@
 
 	}
 }
+
